Fix long text overflowing in task comments
Fixes #270

--- a/src/styles/theme/content.scss
+++ b/src/styles/theme/content.scss
@@ -40,3 +40,7 @@
     }
   }
 }
+
+.media-content {
+  width: calc(100% - 48px - 2em);
+}
